fix: swagger timeout
